# code-lens

./: .code-lens-ignore.example  .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  Makefile  README.md  compose.yml
.agents/skills/frontend-svelte/: .skillfish.json
.config/: nginx.conf  server.toml
.diagrams/: agents-arch.md  code-analysis-flow.mmd  current-flow.md  full-flow.mmd  rag-complete.md  rag-flow.mmd  v1.md
.diagrams/guia-implementacion/: 01-arquitectura.md  02-indexacion.md  03-wiki.md  04-chat-rag.md  05-configuracion.md  README.md
.github/actions/doc-generator/: action.yml
.github/workflows/: cd.yml  cli.yml  rust.yml
.github/workflows/cd/: server.yml
apps/cli/: .npmignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/cli/"/tmp"/node-compile-cache/v22.15.0-x64-efe9a9df-1000/: 000b7ea7  0084f8b5  00e0266d  00f410d4  01037c25  012a33cc  021d02d8  021ebfcf  023f8274  032d3fdb  033d1b28  04455f75  0449ec02  04526d75  0491b53e  04a98798  05e5e696  065f1c89  06ded295  070dbc55  07126006  07499c32  0787188b  07ca0297  08275fd5  084a87f9  08852749  08861ebc  08b78d5b  08d50830  08f23fc5  08fac037  09131bea  09fe07a0  0a29cf36  0a3d91b8  0aaae73a  0b25564a  0b3bb160  0b93f3e2  (+955 more)
apps/cli/src/: api.rs  api.ts  cli.rs  main.rs  main.ts  state.ts  token.rs  ui.rs
apps/cli/src/commands/: generate.rs  generate.ts  list.ts  login.ts  logout.ts  refresh.rs
apps/client/: README.md  package-lock.json  package.json
apps/server/: Cargo.toml  Dockerfile
apps/server/config/: base-prompt.md  config.toml  entrypoint.sh  ignore-patterns  v2.md  vpn.sh
apps/server/config/migrations/: 20260109193407_repository-metadata.sql  20260201014610_add_repositories_db_table.sql  20260225000000_add_revoked_tokens.sql
apps/server/config/scripts/: vpn.sh
apps/server/migrations/: 20260109193407_repository-metadata.sql
apps/server/src/: logger.rs  main.rs
apps/server/src/auth/: controller.rs  dtos.rs  mod.rs  service.rs
apps/server/src/auth/ldap/: client.rs  mod.rs
apps/server/src/auth/services/: ldap.rs  mod.rs
apps/server/src/common/: cors.rs  database.rs  errors.rs  extractors.rs  jsonwebtoken.rs  mod.rs
apps/server/src/mailer/: client.rs  mod.rs
apps/server/src/repositories/: controller.rs  controllers.rs  dtos.rs  interceptor.rs  mod.rs  repository.rs  service.rs
apps/server/src/repositories/services/: mod.rs  preprocessor.rs
apps/server/src/shared/: database.rs  errors.rs  jsonwebtoken.rs  mod.rs  wiki.rs
apps/server/src/shared/event_queue/: handler.rs  mod.rs  subscriber.rs
apps/server/src/shared/mailer/: client.rs  mod.rs
apps/server/src/shared/mailer/templates/: doc-gen.html  mod.rs  welcome.html
apps/server/src/token/: controllers.rs  dtos.rs  mod.rs
apps/server/src/tokens/: controller.rs  dtos.rs  interceptor.rs  mod.rs  repository.rs  service.rs
apps/server/src/users/: dtos.rs  entity.rs  mod.rs  repository.rs
apps/server/tools/: seeder.rs
apps/wiki/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/wiki-rs/: Cargo.toml
apps/wiki-rs/config/prompts/: planner.txt
apps/wiki-rs/src/: api.rs  config.rs  docs.rs  error.rs  llm.rs  main.rs  models.rs  prompts.rs
apps/wiki-rs/src/agents/: planner.rs  writer.rs
apps/wiki-rs/src/rag/: classifier.rs  mod.rs  qdrant.rs  splitter.rs
apps/wiki/config/: planner.txt  prompt.txt  writter.txt
apps/wiki/config/explorer/: 00.system.txt  01.analyze-project.txt  02.format-output.txt
apps/wiki/config/planner/: 00.system.txt  01.analyze-sections.txt  01.format-output.txt  01.select-summary-files.txt  02.format-output.txt  02.write-summary.txt  03.write-sections.txt  planner.txt
apps/wiki/config/writer/: 00.system.txt  01.write-docs.txt  writer.txt
apps/wiki/src/: api.ts  env.ts  logger.ts  main.ts  prompts.ts  server.ts
apps/wiki/src/agents/: explorer.ts  index.ts  planner.ts  writer.agent.ts  writer.ts
apps/wiki/src/agents/explorer/: agent.ts  schemas.ts
apps/wiki/src/agents/planner/: agent.ts  schemas.ts
apps/wiki/src/agents/writer/: agent.ts  schemas.ts
apps/wiki/src/api/: index.ts  middleware.ts  schemas.ts
apps/wiki/src/docs/: generator.ts
apps/wiki/src/llm/: llm.factory.ts  vllm.service.ts
apps/wiki/src/mcp/: filesystem.ts  types.ts
apps/wiki/src/rag/: classifier.ts  index.ts  languages.ts  qdrant.ts
apps/wiki/src/rag/file-processing/: ast.ts  chunker.ts  classifier.ts  documents.ts  languages.ts
apps/wiki/src/rag/loaders/: ast.ts  documents.ts
apps/wiki/src/schemas/: api.schema.ts  explorer.schema.ts  sections.schema.ts
apps/wiki/src/utils/: content-limiter.ts  env.ts  llm.ts  logger.ts  prompts.ts  result.ts
config/: qdrant.yaml
