[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docs-generator"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
inquire = "0.9.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
