[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "seeder"
path = "tools/seeder.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sword = { version = "0.2.1", features = ["validation-validator"] }

uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
validator = { version = "0.20.0", features = ["derive"] }

sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.8", features = ["trace", "tracing"] }

thiserror = "2.0.17"
ldap3 = { version = "0.12.1", features = ["tls"] }

git2 = "0.18"
async-walkdir = "2.0"
futures = "0.3"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
reqwest = { version = "0.13.2", features = ["json"] }
globset = "0.4"
bon = "3.9.0"
