[package]
name = "wiki-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wiki-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.0", features = ["chat-completion", "embedding", "model"] }
axum = { version = "0.8.6", features = ["macros"] }
globset = "0.4.18"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["json"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slug = "0.1.6"
text-splitter = { version = "0.29.3", features = ["markdown", "code"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tree-sitter = "0.26.6"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.2"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
